--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">CodeAthon_Interpreto</string>
     <string name="capture_image">Capture Image</string>
     <string name="translation">Translate</string>
-    <string name="no_connection">No internet connection</string>
+    <string name="no_connection">No internet connection! Cannot be translated!</string>
 </resources>
