--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="capture_image">Capture Image</string>
     <string name="translation">Translate</string>
     <string name="no_connection">No internet connection! Cannot be translated!</string>
+    <string name="detect_image">Detect Image</string>
 </resources>
